Page Titles - Class name correction

--- a/maquetado/scss/_titles.scss
+++ b/maquetado/scss/_titles.scss
@@ -1,7 +1,7 @@
 @import 'colors';
 @import 'variables';
 
-.text-big {
+.title {
   color: $black;
   font-size: $text-big;
   height: $title-decoration-height;
