--- a/maquetado/scss/_variables.scss
+++ b/maquetado/scss/_variables.scss
@@ -1,3 +1,7 @@
+
+$assets_path: 'assets';
+$tech-card-size: 220px;
+$tech-card-icon-size: 100px;
 $tech-logo-size: 75px;
 $text-big: 25px;
 $title-decoration-height: 100px;
