--- a/maquetado/scss/_variables.scss
+++ b/maquetado/scss/_variables.scss
@@ -3,5 +3,6 @@ $assets_path: 'assets';
 $tech-card-size: 220px;
 $tech-card-icon-size: 100px;
 $tech-logo-size: 75px;
-$text-big: 25px;
+$text-big: 24px;
+$text-medium: 16px;
 $title-decoration-height: 100px;
