--- a/maquetado/scss/_titles.scss
+++ b/maquetado/scss/_titles.scss
@@ -5,6 +5,7 @@
   color: $black;
   font-size: $text-big;
   height: $title-decoration-height;
+  margin-bottom: 30px;
   padding: 40px 55px;
   position: relative;
   width: 100%;
