--- a/maquetado/scss/application.scss
+++ b/maquetado/scss/application.scss
@@ -1,3 +1,15 @@
 @import 'equalizer';
 @import 'titles';
 @import 'tech';
+
+.main {
+  height: 100vh;
+  overflow: auto;
+  padding: 0 20px;
+  width: 100%;
+
+  &-content {
+    margin: auto;
+    width: 80%;
+  }
+}
