Content Layout - Corrections

--- a/maquetado/scss/application.scss
+++ b/maquetado/scss/application.scss
@@ -2,14 +2,8 @@
 @import 'titles';
 @import 'tech';
 
-.main {
-  height: 100vh;
-  overflow: auto;
-  padding: 0 20px;
-  width: 100%;
-
-  &-content {
-    margin: auto;
-    width: 80%;
-  }
+.main-content {
+  margin: 0 auto;
+  max-width: 100%;
+  width: 1200px;
 }
