--- a/maquetado/scss/_tech.scss
+++ b/maquetado/scss/_tech.scss
@@ -7,6 +7,7 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   margin: 15px;
   padding: 20px 30px;
   position: relative;
