--- a/maquetado/scss/_tech.scss
+++ b/maquetado/scss/_tech.scss
@@ -1,6 +1,5 @@
 @import 'colors';
 @import 'variables';
-@import 'mixins';
 
 .tech-card {
   align-items: center;
@@ -22,14 +21,13 @@
     left: -10px;
     position: absolute;
     top: -10px;
-    @include transition(top .2s, left .2s); /* Imported from mixins */
+    transition: transform .2s;
     width: 100%;
     z-index: -1;
   }
 
   &:hover::before {
-    top: 10px;
-    left: 10px;
+    transform: translate(20px, 20px);
   }
 
   &-logo {
