--- a/maquetado/scss/_variables.scss
+++ b/maquetado/scss/_variables.scss
@@ -1,5 +1,7 @@
 
 $assets_path: 'assets';
+$nav-height: 90px;
+$nav-logo-height: 30px;
 $tech-card-size: 220px;
 $tech-card-icon-size: 100px;
 $tech-logo-size: 75px;
