--- a/maquetado/scss/_variables.scss
+++ b/maquetado/scss/_variables.scss
@@ -7,4 +7,5 @@ $tech-card-icon-size: 100px;
 $tech-logo-size: 75px;
 $text-big: 24px;
 $text-medium: 16px;
+$text-small: 12px;
 $title-decoration-height: 100px;
