--- a/maquetado/scss/application.scss
+++ b/maquetado/scss/application.scss
@@ -6,9 +6,10 @@
 @import 'variables';
 
 /* Content */
+@import 'footer';
 @import 'navbar';
-@import 'titles';
 @import 'tech';
+@import 'titles';
 
 
 .main-content {
