--- a/maquetado/scss/_navbar.scss
+++ b/maquetado/scss/_navbar.scss
@@ -1,7 +1,7 @@
 .nav-bar {
   align-items: center;
   background-color: $white;
-  box-shadow: 0 5px 5px rgba($light_gray, 0.75);
+  box-shadow: 0 5px 5px rgba($light-gray, 0.75);
   display: flex;
   height: $nav-height;
   justify-content: space-between;
