--- a/maquetado/scss/_footer.scss
+++ b/maquetado/scss/_footer.scss
@@ -14,9 +14,9 @@
   }
 
   &-logo {
-    height: 60px;
+    height: auto;
     margin-bottom: 10px;
-    width: auto;
+    width: 400px;
   }
 
   &-slogan {
