New Folder Structure

--- a/wolox-books/src/app/screens/register/register.component.html
+++ b/wolox-books/src/app/screens/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="register-box">
-  <img class="register-box-logo" src="../../assets/wolox_logo.svg" alt="Wolox Logo">
+  <img class="register-box-logo" src="assets/wolox_logo.svg" alt="Wolox Logo">
   <span class="register-box-txt">BOOKS</span>
   <div class="register-box-form">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit(registerForm.value)">
