--- a/wolox-books/src/app/screens/unauth/register/register.component.html
+++ b/wolox-books/src/app/screens/unauth/register/register.component.html
@@ -23,7 +23,7 @@
         <label class="form-label" for="passwordConfirmation">Confirm Password</label>
         <input class="form-input" type="password" formControlName="passwordConfirmation">
       </div>
-      <input class="button button-block button-green" type="submit" value="Sign Up">
+      <button class="button button-block button-green" type="submit">Sign Up</button>
     </form>
   </div>
   <button class="button button-block button-outline-green" type="button">Login</button>
