Registration Api integration

--- a/wolox-books/src/app/screens/unauth/register/register.component.html
+++ b/wolox-books/src/app/screens/unauth/register/register.component.html
@@ -2,7 +2,7 @@
   <img class="register-box-logo" src="assets/wolox_logo.svg" alt="Wolox Logo">
   <span class="register-box-txt">BOOKS</span>
   <div class="register-box-form">
-    <form [formGroup]="registerForm" (ngSubmit)="onSubmit(registerForm.value)">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <label class="form-label" for="firstName">First name</label>
         <input class="form-input" type="text" formControlName="firstName">
