--- a/wolox-books/src/app/screens/unauth/register/register.component.html
+++ b/wolox-books/src/app/screens/unauth/register/register.component.html
@@ -26,5 +26,5 @@
       <button class="button button-block button-green" type="submit">Sign Up</button>
     </form>
   </div>
-  <button class="button button-block button-outline-green" type="button">Login</button>
+  <a class="button button-block button-outline-green" type="button" routerLink="/login">Login</a>
 </div>
