--- a/wolox-books/src/app/screens/unauth/login/login.component.html
+++ b/wolox-books/src/app/screens/unauth/login/login.component.html
@@ -1,3 +1,5 @@
-<p>
-  login works!
-</p>
+<app-unauth-card [buttonText]="unauthCardButtonTxt" (onButtonClick)="goToRegister()">
+  <p>
+    Login Work!
+  </p>
+</app-unauth-card>
