--- a/wolox-books/src/app/screens/unauth/components/unauth-card/unauth-card.component.scss
+++ b/wolox-books/src/app/screens/unauth/components/unauth-card/unauth-card.component.scss
@@ -13,7 +13,8 @@
     display: flex;
     flex-direction: column;
     padding: 40px 20px 20px;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
 
     &-form {
       border-bottom: 2px solid $gray;
