--- a/wolox-books/src/app/screens/unauth/components/unauth-card/unauth-card.component.html
+++ b/wolox-books/src/app/screens/unauth/components/unauth-card/unauth-card.component.html
@@ -1,6 +1,6 @@
 <div class="unauth-box">
   <img class="unauth-box-logo" src="assets/wolox_logo.svg" alt="Wolox Logo">
-  <span class="unauth-box-txt">BOOKS</span>
+  <h1 class="unauth-box-txt">BOOKS</h1>
   <div class="unauth-box-form">
     <ng-content></ng-content>
   </div>
