--- a/wolox-books/src/app/components/nav-bar/nav-bar.component.html
+++ b/wolox-books/src/app/components/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
   </div>
   <ul class="nav-bar-account">
     <li>
-      <a href="javascript:void(0)" (click)="onLogout()">Logout</a>
+      <a (click)="onLogout()">Logout</a>
     </li>
   </ul>
 </nav>
