Authetication Guard - Corrections

--- a/wolox-books/src/app/components/nav-bar/nav-bar.component.html
+++ b/wolox-books/src/app/components/nav-bar/nav-bar.component.html
@@ -4,8 +4,8 @@
     <span class="nav-bar-brand-txt">BOOKS</span>
   </div>
   <ul class="nav-bar-account">
-    <li>
-      <a (click)="onLogout()">Logout</a>
+    <li class="nav-bar-item">
+      <a class="nav-bar-link" (click)="onLogout()">Logout</a>
     </li>
   </ul>
 </nav>
