--- a/wolox-books/src/app/components/nav-bar/nav-bar.component.scss
+++ b/wolox-books/src/app/components/nav-bar/nav-bar.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: $white;
   border-top: 5px solid $blue;
-  box-shadow: 0 5px 5px rgba($light-gray, 0.75);
+  box-shadow: 0 5px 5px rgba($gray, 0.75);
   display: flex;
   height: 60px;
   justify-content: space-around;
