--- a/wolox-books/src/app/components/nav-bar/nav-bar.component.html
+++ b/wolox-books/src/app/components/nav-bar/nav-bar.component.html
@@ -5,7 +5,7 @@
   </div>
   <ul class="nav-bar-account">
     <li class="nav-bar-item">
-      <a class="nav-bar-link" (click)="onLogout()">Logout</a>
+      <a class="nav-bar-link" (click)="onLogout()" i18n>Logout</a>
     </li>
   </ul>
 </nav>
