--- a/wolox-books/src/app/screens/auth/components/book-card/book-card.component.html
+++ b/wolox-books/src/app/screens/auth/components/book-card/book-card.component.html
@@ -2,7 +2,7 @@
   <div class="book-card-container-img">
     <img *ngIf="book.imageUrl; else noImage" class="book-card-img" [src]="book.imageUrl || ''" alt="Book Image">
     <ng-template #noImage>
-      <span class="no-image">No Image Available</span>
+      <span class="no-image" i18n>No Image Available</span>
     </ng-template>
   </div>
   <h3 class="book-card-title">{{ book.title }}</h3>
