--- a/wolox-books/src/app/screens/unauth/login/login.component.html
+++ b/wolox-books/src/app/screens/unauth/login/login.component.html
@@ -1,13 +1,13 @@
 <app-unauth-card [buttonText]="unauthCardButtonTxt" (onButtonClick)="goToRegister()">
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit(loginForm.value)">
     <div class="form-group">
-      <label class="form-label" for="email">Email</label>
+      <label class="form-label" for="email" i18n>Email</label>
       <input class="form-input" type="text" formControlName="email">
     </div>
     <div class="form-group">
-      <label class="form-label" for="password">Password</label>
+      <label class="form-label" for="password" i18n>Password</label>
       <input class="form-input" type="password" formControlName="password">
     </div>
-    <button class="button button-block button-green" type="submit">Login</button>
+    <button class="button button-block button-green" type="submit" i18n>Login</button>
   </form>
 </app-unauth-card>
