--- a/wolox-books/src/app/screens/unauth/register/register.component.html
+++ b/wolox-books/src/app/screens/unauth/register/register.component.html
@@ -1,25 +1,25 @@
 <app-unauth-card [buttonText]="unauthCardButtonTxt" (onButtonClick)="goToLogin()">
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit(registerForm.value)">
     <div class="form-group">
-      <label class="form-label" for="firstName">First name</label>
+      <label class="form-label" for="firstName" i18n>First name</label>
       <input class="form-input" type="text" formControlName="firstName">
     </div>
     <div class="form-group">
-      <label class="form-label" for="lastName">Last name</label>
+      <label class="form-label" for="lastName" i18n>Last name</label>
       <input class="form-input" type="text" formControlName="lastName">
     </div>
     <div class="form-group">
-      <label class="form-label" for="email">Email</label>
+      <label class="form-label" for="email" i18n>Email</label>
       <input class="form-input" type="text" formControlName="email">
     </div>
     <div class="form-group">
-      <label class="form-label" for="password">Password</label>
+      <label class="form-label" for="password" i18n>Password</label>
       <input class="form-input" type="password" formControlName="password">
     </div>
     <div class="form-group">
-      <label class="form-label" for="passwordConfirmation">Confirm Password</label>
+      <label class="form-label" for="passwordConfirmation" i18n>Confirm Password</label>
       <input class="form-input" type="password" formControlName="passwordConfirmation">
     </div>
-    <button class="button button-block button-green" type="submit">Sign Up</button>
+    <button class="button button-block button-green" type="submit" i18n>Sign Up</button>
   </form>
 </app-unauth-card>
